compiler/tests/en/errors/pure_global_write.salam
// EXPECT: E013
mut total i32 = 0

pure func bump(x i32) i32:
    total = total + x
    ret total
end

func main:
    println(bump(2))
end
